# pgaro

./: .travis.yml  CMakeLists.txt  README.md
cmake_modules/: catch.cmake  fakeit.cmake
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_main.cpp
